# energy-calculator

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  i18n.toml
.cargo/: config.toml
.github/workflows/: release.yml
i18n/en-US/: energy_calculator.ftl
i18n/ru-RU/: energy_calculator.ftl
src/: app.rs  lib.rs  main.rs
