[package]
name = "energy-calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
  "default_fonts",
  "glow",
] }
log = "0.4.26"
env_logger = "0.11.7"
rust-embed = "8.6.0"
unic-langid = "0.9.5"
i18n-embed = { version = "0.15.3", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.9.3"
